--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,65 @@
       </div>
     </div>
 
+    <section id='album-form' class="container">
+      <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        
+        <form class="form-horizontal">
+          <fieldset>
+            
+            <!-- Form Name -->
+            <legend>Add New Album</legend>
+
+            <!-- Text Input -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="name">Album Name</label>
+              <div class="col-md-4">
+              <input id="name" type="text" name="name" placeholder="ex. Dark Side of the Moon" class="form-control input-md" required="">
+
+              </div>
+            </div>
+
+            <!-- Text Input -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="artistName">Artist Name</label>
+              <div class="col-md-4">
+              <input id="artistName" type="text" name="artistName" placeholder="ex. Kanye" class="form-control input-md">
+
+              </div>
+            </div>
+
+            <!-- Text Input -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="releaseDate">Release Date</label>
+              <div class="col-md-4">
+              <input id="releaseDate" type="text" name="releaseDate" placeholder="1991" class="form-control input-md">
+
+              </div>
+            </div>
+
+            <!-- Textarea -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="genres">Genres (separated by commas</label>
+              <div class="col-md-4">
+                <textarea class="form-control" id="genres" name="genres">Rock, Pop</textarea>
+              </div>
+            </div>
+
+            <!-- Button -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="singleButton">Save Album</label>
+              <div class="col-md-4">
+                <button id="singleButton" name="singleButton" class="btn btn-primary">Submit</button>
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+        
+      </div>
+    </section>
+
     <section class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
@@ -38,15 +97,15 @@
 
 
           <!-- one album -->
-          <div class="row album">
+          <!-- <div class="row album">
 
             <div class="col-md-10 col-md-offset-1">
               <div class="panel panel-default">
                 <div class="panel-body">
-
+ -->
 
                 <!-- begin album internal row -->
-                  <div class='row'>
+                  <!-- <div class='row'>
                     <div class="col-md-3 col-xs-12 thumbnail album-art">
                       <img src="http://placehold.it/800x800" alt="album image">
                     </div>
@@ -70,16 +129,16 @@
                       </ul>
                     </div>
 
-                  </div>
+                  </div> -->
                   <!-- end of album internal row -->
-
+<!-- 
                   <div class='panel-footer'>
                   </div>
 
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- end one album -->
 
 
