--- a/views/index.html
+++ b/views/index.html
@@ -97,15 +97,15 @@
 
 
           <!-- one album -->
-          <!-- <div class="row album">
+            <div class="row album">
 
             <div class="col-md-10 col-md-offset-1">
               <div class="panel panel-default">
                 <div class="panel-body">
- -->
+
 
                 <!-- begin album internal row -->
-                  <!-- <div class='row'>
+                  <div class='row'>
                     <div class="col-md-3 col-xs-12 thumbnail album-art">
                       <img src="http://placehold.it/800x800" alt="album image">
                     </div>
@@ -129,17 +129,18 @@
                       </ul>
                     </div>
 
-                  </div> -->
+                  </div>
                   <!-- end of album internal row -->
-<!-- 
+
                   <div class='panel-footer'>
+                   <button class='btn btn-primary add-song'>Add Song</button>
                   </div>
 
                 </div>
               </div>
             </div>
-          </div> -->
-          <!-- end one album -->
+          </div> 
+          <!-- end one album --> 
 
 
 
