--- a/views/index.html
+++ b/views/index.html
@@ -97,15 +97,15 @@
 
 
           <!-- one album -->
-            <div class="row album">
+         <!--    <div class="row album">
 
             <div class="col-md-10 col-md-offset-1">
               <div class="panel panel-default">
-                <div class="panel-body">
+                <div class="panel-body"> -->
 
 
                 <!-- begin album internal row -->
-                  <div class='row'>
+                  <!-- <div class='row'>
                     <div class="col-md-3 col-xs-12 thumbnail album-art">
                       <img src="http://placehold.it/800x800" alt="album image">
                     </div>
@@ -129,17 +129,16 @@
                       </ul>
                     </div>
 
-                  </div>
+                  </div> -->
                   <!-- end of album internal row -->
 
-                  <div class='panel-footer'>
-                   <button class='btn btn-primary add-song'>Add Song</button>
+                 <!--  <div class='panel-footer'>
                   </div>
 
                 </div>
               </div>
             </div>
-          </div> 
+          </div>  -->
           <!-- end one album --> 
 
 
@@ -182,7 +181,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default" id="closeSong" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary" id="saveSong">Save changes</button>
           </div>
         </div><!-- /.modal-content -->
